{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 211,
  "lineage": "838d2cd8-7aa1-880a-c6be-67f8e53ea5e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cards-ig-aps01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:420846656222:internet-gateway/igw-00911ed9720308c24",
            "id": "igw-00911ed9720308c24",
            "owner_id": "420846656222",
            "tags": {
              "Name": "cards-ig-aps01"
            },
            "tags_all": {
              "Name": "cards-ig-aps01"
            },
            "vpc_id": "vpc-0e28fdedfc8b4eb35"
          },
          "dependencies": [
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "cards-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:loadbalancer/app/cards-lb/9187bbdc2d4e1e1b",
            "arn_suffix": "app/cards-lb/9187bbdc2d4e1e1b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cards-lb-995364633.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:loadbalancer/app/cards-lb/9187bbdc2d4e1e1b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cards-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cbaab36c32377ca4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015f6e3511ce070d0"
              },
              {
                "subnet_id": "subnet-051934ef70437a920"
              },
              {
                "subnet_id": "subnet-06f0e4fa1baaf0398"
              }
            ],
            "subnets": [
              "subnet-015f6e3511ce070d0",
              "subnet-06f0e4fa1baaf0398"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0e28fdedfc8b4eb35",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.card-sg-1",
            "aws_subnet.Cards-aps1-subnet-1a",
            "aws_subnet.Cards-aps1-subnet-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "cards-front-end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:listener/app/cards-lb/9187bbdc2d4e1e1b/4be41fb37ea139c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:targetgroup/cards-lb-tg/b8a335dd1896825f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:listener/app/cards-lb/9187bbdc2d4e1e1b/4be41fb37ea139c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:loadbalancer/app/cards-lb/9187bbdc2d4e1e1b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.cards-lb",
            "aws_lb_target_group.cards-lb-tg",
            "aws_security_group.card-sg-1",
            "aws_subnet.Cards-aps1-subnet-1a",
            "aws_subnet.Cards-aps1-subnet-1b",
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cards-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:targetgroup/cards-lb-tg/b8a335dd1896825f",
            "arn_suffix": "targetgroup/cards-lb-tg/b8a335dd1896825f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:420846656222:targetgroup/cards-lb-tg/b8a335dd1896825f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cards-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e28fdedfc8b4eb35"
          },
          "dependencies": [
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cards-vpc-rt-aps1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:420846656222:route-table/rtb-0b1a35b96a52514f6",
            "id": "rtb-0b1a35b96a52514f6",
            "owner_id": "420846656222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00911ed9720308c24",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cards-vpc-rt-aps1"
            },
            "tags_all": {
              "Name": "cards-vpc-rt-aps1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e28fdedfc8b4eb35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cards-ig-aps01",
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-rtas-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0864bbef4a0176e66",
            "route_table_id": "rtb-0b1a35b96a52514f6",
            "subnet_id": "subnet-015f6e3511ce070d0"
          },
          "dependencies": [
            "aws_internet_gateway.cards-ig-aps01",
            "aws_route_table.cards-vpc-rt-aps1",
            "aws_subnet.Cards-aps1-subnet-1a",
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-rtas-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e2ae2cb3fa7b247",
            "route_table_id": "rtb-0b1a35b96a52514f6",
            "subnet_id": "subnet-06f0e4fa1baaf0398"
          },
          "dependencies": [
            "aws_internet_gateway.cards-ig-aps01",
            "aws_route_table.cards-vpc-rt-aps1",
            "aws_subnet.Cards-aps1-subnet-1b",
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "card-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:420846656222:security-group/sg-0cbaab36c32377ca4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cbaab36c32377ca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "card-sg-1",
            "name_prefix": "",
            "owner_id": "420846656222",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "card-sg-1"
            },
            "tags_all": {
              "Name": "card-sg-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e28fdedfc8b4eb35"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Cards-aps1-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:420846656222:subnet/subnet-015f6e3511ce070d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015f6e3511ce070d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420846656222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cards-aps1-subnet"
            },
            "tags_all": {
              "Name": "Cards-aps1-subnet"
            },
            "vpc_id": "vpc-0e28fdedfc8b4eb35"
          },
          "dependencies": [
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Cards-aps1-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:420846656222:subnet/subnet-06f0e4fa1baaf0398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f0e4fa1baaf0398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420846656222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Cards-aps1-subnet-1b"
            },
            "tags_all": {
              "Name": "Cards-aps1-subnet-1b"
            },
            "vpc_id": "vpc-0e28fdedfc8b4eb35"
          },
          "dependencies": [
            "aws_vpc.Cards-vpcapsouth-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Cards-vpcapsouth-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:420846656222:vpc/vpc-0e28fdedfc8b4eb35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-008ad214bd748a1ad",
            "default_route_table_id": "rtb-016184ec2ef13628f",
            "default_security_group_id": "sg-04697ecab57ea96e0",
            "dhcp_options_id": "dopt-073eee38be812991d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e28fdedfc8b4eb35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016184ec2ef13628f",
            "owner_id": "420846656222",
            "tags": {
              "Name": "Cards-vpcapsouth-1"
            },
            "tags_all": {
              "Name": "Cards-vpcapsouth-1"
            }
          }
        }
      ]
    }
  ]
}